--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "gpt-3-encoder": "^1.1.4",
     "openai": "^4.26.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
