--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "gpt-3-encoder": "^1.1.4",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.26.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
