--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.26.0",
     "pinia": "^2.1.7",
+    "replicate": "^0.18.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
